Closed Bug 1511749 Opened 6 years ago Closed 6 years ago

Intermittent Assertion failure: mWorkerManagers.Contains(aManager), at z:/build/build/src/dom/workers/sharedworkers/SharedWorkerService.cpp:335

Categories

(Core :: DOM: Workers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla67
Tracking Status
firefox-esr60 --- unaffected
firefox65 --- wontfix
firefox66 --- wontfix
firefox67 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: baku)

Details

(Keywords: assertion, intermittent-failure, Whiteboard: [stockwell disable-recommended])

Attachments

(1 file)

Filed by: nerli [at] mozilla.com https://treeherder.mozilla.org/logviewer.html#?job_id=215212487&repo=autoland https://queue.taskcluster.net/v1/task/Yz-QJ9QeSSGGszkqAsqslQ/runs/0/artifacts/public/logs/live_backing.log 23:28:41 INFO - GECKO(5524) | #09: nsAppShell::Run() [widget/windows/nsAppShell.cpp:409] 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | #10: nsAppStartup::Run() [toolkit/components/startup/nsAppStartup.cpp:272] 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | #11: XREMain::XRE_mainRun() [toolkit/xre/nsAppRunner.cpp:4622] 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | #12: XREMain::XRE_main(int,char * * const,mozilla::BootstrapConfig const &) [toolkit/xre/nsAppRunner.cpp:4760] 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | #13: XRE_main(int,char * * const,mozilla::BootstrapConfig const &) [toolkit/xre/nsAppRunner.cpp:4845] 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | #14: mozilla::BootstrapImpl::XRE_main(int,char * * const,mozilla::BootstrapConfig const &) [toolkit/xre/Bootstrap.cpp:39] 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | #15: NS_internal_main(int,char * *,char * *) [browser/app/nsBrowserApp.cpp:293] 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | #16: wmain [toolkit/xre/nsWindowsWMain.cpp:129] 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | #17: static int __scrt_common_main_seh() [f:/dd/vctools/crt/vcstartup/src/startup/exe_common.inl:288] 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | #18: kernel32.dll + 0x53c45 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | #19: ntdll.dll + 0x637f5 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | #20: ntdll.dll + 0x637c8 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | Hit MOZ_CRASH(Aborting on channel error.) at z:/build/build/src/ipc/glue/MessageChannel.cpp:2487 23:28:41 INFO - GECKO(5524) | Hit MOZ_CRASH(Aborting on channel error.) at z:/build/build/Hit MOZ_CRASH(Aborting on channel error.) at z:/build/build/src/ipc/glue/MessageChannel.cpp:2487 23:28:41 INFO - GECKO(5524) | Hit MOZ_CRASH(Aborting on channel error.) at z:/build/build/src/ipc/glue/MessageChannel.cpp:2487 23:28:41 INFO - GECKO(5524) | H 23:28:41 INFO - TEST-INFO | Main app process: exit 1 23:28:41 ERROR - TEST-UNEXPECTED-FAIL | ShutdownLeaks | process() called before end of test suite 23:28:41 INFO - Buffered messages logged at 23:28:39 23:28:41 INFO - Entering test bound test 23:28:41 INFO - Buffered messages finished 23:28:41 ERROR - TEST-UNEXPECTED-FAIL | dom/tests/browser/perfmetrics/browser_test_performance_metrics.js | application terminated with exit code 1 23:28:41 INFO - runtests.py | Application ran for: 0:00:06.967000
23:28:41 INFO - GECKO(5524) | Assertion failure: mWorkerManagers.Contains(aManager), at z:/build/build/src/dom/workers/sharedworkers/SharedWorkerService.cpp:335 23:28:41 INFO - GECKO(5524) | #01: nsresult mozilla::dom::`anonymous namespace'::RemoveWorkerManagerRunnable::Run() [dom/workers/sharedworkers/SharedWorkerService.cpp:118] 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | #02: nsThread::ProcessNextEvent(bool,bool *) [xpcom/threads/nsThread.cpp:1144] 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | #03: NS_ProcessNextEvent(nsIThread *,bool) [xpcom/threads/nsThreadUtils.cpp:468] 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | #04: mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate *) [ipc/glue/MessagePump.cpp:88] 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | #05: MessageLoop::RunInternal() [ipc/chromium/src/base/message_loop.cc:314] 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | #06: MessageLoop::RunHandler() [ipc/chromium/src/base/message_loop.cc:308] 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | #07: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:290] 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | #08: nsBaseAppShell::Run() [widget/nsBaseAppShell.cpp:139] 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | #09: nsAppShell::Run() [widget/windows/nsAppShell.cpp:409] 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | #10: nsAppStartup::Run() [toolkit/components/startup/nsAppStartup.cpp:272] 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | #11: XREMain::XRE_mainRun() [toolkit/xre/nsAppRunner.cpp:4622] 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | #12: XREMain::XRE_main(int,char * * const,mozilla::BootstrapConfig const &) [toolkit/xre/nsAppRunner.cpp:4760] 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | #13: XRE_main(int,char * * const,mozilla::BootstrapConfig const &) [toolkit/xre/nsAppRunner.cpp:4845] 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | #14: mozilla::BootstrapImpl::XRE_main(int,char * * const,mozilla::BootstrapConfig const &) [toolkit/xre/Bootstrap.cpp:39] 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | #15: NS_internal_main(int,char * *,char * *) [browser/app/nsBrowserApp.cpp:293] 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | #16: wmain [toolkit/xre/nsWindowsWMain.cpp:129] 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | #17: static int __scrt_common_main_seh() [f:/dd/vctools/crt/vcstartup/src/startup/exe_common.inl:288] 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | #18: kernel32.dll + 0x53c45 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | #19: ntdll.dll + 0x637f5 23:28:41 INFO - 23:28:41 INFO - GECKO(5524) | #20: ntdll.dll + 0x637c8
Summary: Intermittent ShutdownLeaks | process() called before end of test suite after Assertion failure: mWorkerManagers.Contains(aManager), at z:/build/build/src/dom/workers/sharedworkers/SharedWorkerService.cpp:335 → Intermittent Assertion failure: mWorkerManagers.Contains(aManager), at z:/build/build/src/dom/workers/sharedworkers/SharedWorkerService.cpp:335

This bug failed 67 times in the last 7 days. Occurs on linux32, linux64, linux64-ccov, osx-10-10, windows7-32 on debug build type.

Recent log:
https://treeherder.mozilla.org/logviewer.html#?job_id=232696446&repo=autoland

overholt: Can you please take a look at this bug?

Flags: needinfo?(overholt)

Andrea this reappeared when bug 1525245 landed here: https://treeherder.mozilla.org/#/jobs?repo=autoland&revision=9f8a1b41032052121d45540b57db45710011820e&selectedJob=232219574

Can you please take a look? failure rate is really high.

Flags: needinfo?(overholt) → needinfo?(amarchesini)
Assignee: nobody → amarchesini
Flags: needinfo?(amarchesini)
Attachment #9050392 - Attachment is obsolete: true
Attachment #9050392 - Attachment is obsolete: false
Pushed by amarchesini@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/45024ae5b1b7 Fix a race condition in SharedWorker shutdown, r=asuth
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla67
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: