Bug 1511749 - Fix a race condition in SharedWorker shutdown, r=asuth

Differential Revision: https://phabricator.services.mozilla.com/D23188